# semantic-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.py
memory/vector_db/: chroma.sqlite3
nginx/: nginx.conf
scripts/: generate_token.py
src/: main.py
src/semantic_kernel_ui/: __init__.py  __main__.py  agent_presets.py  app.py  app.py.backup  config.py
src/semantic_kernel_ui/auth/: __init__.py  auth_manager.py
src/semantic_kernel_ui/connectors/: __init__.py  anthropic_chat.py  azure_openai_chat.py  openai_chat.py
src/semantic_kernel_ui/core/: __init__.py  agent_manager.py  kernel_manager.py
src/semantic_kernel_ui/memory/: __init__.py  memory_manager.py  vector_store.py
src/semantic_kernel_ui/plugins/: __init__.py  calculator.py  datetime_utils.py  document_intelligence.py  export.py  filesystem.py  http_api.py  ocr_backends.py  personality.py  text_processing.py  websearch.py
tests/: README.md  conftest.py  run_tests.py  test_agent_manager.py  test_agent_presets.py  test_app.py  test_auth_manager.py  test_calculator_plugin.py  test_config.py  test_datetime_utils_plugin.py  test_document_intelligence.py  test_export_plugin.py  test_fileindex_plugin.py  test_http_api_plugin.py  test_kernel_manager.py  test_memory_manager.py  test_personality_plugin.py  test_semantic_kernel_ui.py  test_simple.py  test_text_processing_plugin.py  test_vector_store.py  test_websearch_plugin.py
