[tool.poetry]
name = "semantic-ui"
version = "1.0.0"
description = "Minimal web interface for Large Language Models using Semantic Kernel"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # Use Python 3.11 (modern, supported by semantic-kernel <3.13)
streamlit = ">=1.48,<2.0"
semantic-kernel = ">=1.39.3,<2.0.0"
python-dotenv = ">=1.0,<2.0"
openai = ">=1.99.0,<2.0.0"
anthropic = ">=0.39.0,<1.0.0"
aiohttp = ">=3.13.3,<4.0"
urllib3 = ">=2.6.3"
werkzeug = ">=3.1.5"
filelock = ">=3.20.3"
azure-core = ">=1.38.0"
pydantic = ">=2.11,<3.0"
pydantic-settings = ">=2.10,<3.0"
typer = ">=0.9,<0.13"
chromadb = ">=0.5.0,<1.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0,<1.0.0"}
redis = ">=5.2.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"
pytest-asyncio = ">=0.23,<0.24"
pytest-cov = ">=5.0,<6.0"
black = ">=24.4,<25.0"
isort = ">=5.13,<6.0"
flake8 = ">=7.0,<8.0"
mypy = ">=1.10,<2.0"
pre-commit = ">=3.7,<4.0"
virtualenv = ">=20.36.1"

[tool.poetry.scripts]
semantic-ui = "src.main:cli"
pytest = "pytest:main"  # Allow `poetry run pytest`

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = ["src"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
]
